[gd_scene load_steps=7 format=2]

[ext_resource path="res://gui/dialogue_box/DialogueBox.tres" type="StyleBox" id=1]
[ext_resource path="res://gui/branching_dialogue_box/BranchingDialogueBox.gd" type="Script" id=2]
[ext_resource path="res://gui/branching_dialogue_box/BranchingDialogueButtonNormal.tres" type="StyleBox" id=3]
[ext_resource path="res://gui/branching_dialogue_box/BranchingDialogueButtonFocus.tres" type="StyleBox" id=4]
[ext_resource path="res://gui/branching_dialogue_box/BranchingDialogueButtonPressed.tres" type="StyleBox" id=5]
[ext_resource path="res://gui/dialogue_font.tres" type="DynamicFont" id=7]

[node name="BranchingDialogueBox" type="CanvasLayer"]
layer = 4
script = ExtResource( 2 )

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_top = 0.9
anchor_right = 1.0
anchor_bottom = 0.9
margin_left = 128.0
margin_top = -388.0
margin_right = -128.0
margin_bottom = -13.0
rect_pivot_offset = Vector2( 128, 49 )
custom_styles/panel = ExtResource( 1 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
margin_left = 2.0
margin_top = 2.0
margin_right = 1662.0
margin_bottom = 373.0
custom_constants/margin_right = 96
custom_constants/margin_top = 72
custom_constants/margin_left = 96
custom_constants/margin_bottom = 72

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer"]
margin_left = 96.0
margin_top = 72.0
margin_right = 1564.0
margin_bottom = 299.0
custom_constants/separation = 64
alignment = 1

[node name="Option1" type="Button" parent="PanelContainer/MarginContainer/HBoxContainer"]
margin_right = 702.0
margin_bottom = 227.0
mouse_filter = 2
size_flags_horizontal = 3
custom_styles/pressed = ExtResource( 5 )
custom_styles/focus = ExtResource( 4 )
custom_styles/normal = ExtResource( 3 )
action_mode = 0
button_mask = 0
expand_icon = true
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer/Option1"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 7 )
text = "option 1"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Option2" type="Button" parent="PanelContainer/MarginContainer/HBoxContainer"]
margin_left = 766.0
margin_right = 1468.0
margin_bottom = 227.0
rect_pivot_offset = Vector2( 48, 8 )
size_flags_horizontal = 3
custom_styles/pressed = ExtResource( 5 )
custom_styles/focus = ExtResource( 4 )
custom_styles/normal = ExtResource( 3 )
action_mode = 0
expand_icon = true
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer/Option2"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 7 )
text = "option 2"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="inactive" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
autostart = true

[connection signal="pressed" from="PanelContainer/MarginContainer/HBoxContainer/Option1" to="." method="_on_option1_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/HBoxContainer/Option2" to="." method="_on_option2_pressed"]
[connection signal="timeout" from="inactive" to="." method="_on_inactive_timeout"]
